@@ -1,6 +1,8 @@
 <?php
 if(!defined('DOKU_INC')) define('DOKU_INC',realpath(dirname(__FILE__).'/../../../').'/');
 if(!defined('DOKU_PLUGIN')) define('DOKU_PLUGIN',DOKU_INC.'lib/plugins/');
+if(!defined('DOKU_MEDIA')) define('DOKU_MEDIA',DOKU_INC.'data/media/');
+define ('BROKEN_IMAGE', DOKU_URL . 'lib/plugins/fckg/fckeditor/userfiles/blink.jpg?nolink&33x34');
 require_once(DOKU_PLUGIN.'action.php');
 define('FCK_ACTION_SUBDIR', realpath(dirname(__FILE__)) . '/');
 /**
@@ -34,6 +36,24 @@ class action_plugin_fckg_save extends DokuWiki_Action_Plugin {
               $TEXT = trim($TEXT);
         }
 
+    if(strpos($TEXT,'data:image') !== false) {
+        $TEXT = preg_replace_callback(
+             '|\{\{data:image\/(\w+;base64,)(.*?)\?nolink&\}\}|ms',
+             create_function(
+                '$matches',
+                'list($ext,$base) = explode(";",$matches[1]);
+                if($ext == "jpeg") $ext = "jpg";      
+                if(function_exists("imagecreatefromstring") && !imagecreatefromstring (base64_decode($matches[2]))) {
+                     msg("Clipboard paste: invalid $ext image format");
+                     return "{{" . BROKEN_IMAGE .  "}}";
+                 }                 
+                  file_put_contents(DOKU_MEDIA . md5($matches[2]) . ".$ext", base64_decode($matches[2]));
+                 $retv = "{{:". md5($matches[2]) . ".$ext" . "}}";
+                 return $retv;'
+             ),
+             $TEXT
+             );
+        }   
 
       $TEXT = str_replace('%%', "FCKGPERCENTESC",  $TEXT);
      
